--- a/index.html
+++ b/index.html
@@ -22,7 +22,26 @@
     </div>
 
     <!--  showings -->
-    <div class="ui cards showings">
+    <div class="ui cards showings" id="card-container">
+      <div class="card">
+        <div class="content">
+          <div class="header">
+            Film Title
+          </div>
+          <div class="meta">
+            (Runtime) minutes
+          </div>
+          <div class="description">
+            (Num Tickets) remaining tickets
+          </div>
+          <span class="ui label">
+            (Showtime)
+          </span>
+        </div>
+        <div class="extra content">
+          <div class="ui blue button">Buy Ticket</div>
+        </div>
+      </div>
     </div>
     <script src="src/index.js"></script>
   </body>
